# eta

./: .gitignore  .pre-commit-config.yaml  parcel-hp-sweep.py  pyproject.toml
notebook/: pipeline.ipynb
src/eta/: __init__.py
