[project]
name = "eta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nguynking", email = "kingnguyen0123@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
eta = "eta:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
