[project]
name = "eta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nguynking", email = "kingnguyen0123@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.2",
    "modal>=1.1.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.5",
    "torch>=2.7.1",
]

[project.scripts]
eta = "eta:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
