[project]
name = "eta"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nguynking", email = "kingnguyen0123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "matplotlib>=3.10.3",
    "modal>=1.1.0",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pre-commit>=4.2.0",
    "pytorch-frame>=0.2.5",
    "requests>=2.32.4",
    "ruff>=0.12.5",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
]

[project.scripts]
eta = "eta:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
